--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/vite": "^0.0.0-development.1",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
